--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "sample streams using reservoir sampling",
   "main": "index.js",
   "scripts": {
-    "test": "prova test.js",
+    "test": "tape test.js",
     "doc": "dox -r < index.js | doxme --readme > README.md"
   },
   "keywords": [
@@ -15,11 +15,13 @@
   ],
   "author": "Tom MacWright",
   "license": "ISC",
+  "dependencies": {
+    "through2": "^2.0.1"
+  },
   "devDependencies": {
-    "dox": "^0.6.1",
+    "dox": "^0.9.0",
     "doxme": "^1.8.2",
-    "prova": "^2.1.1",
-    "through": "^2.3.6"
+    "tape": "^4.6.0"
   },
   "repository": {
     "type": "git",
